[tool.poetry]
name = "sahibinden-bot"
version = "0.1.0"
description = ""
authors = ["Vyazovetskov Vladimir <erhosen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
sentry-sdk = "^1.5.12"
httpx = "^0.22.0"
aiobotocore = "^2.3.2"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
pyTelegramBotAPI = "^4.5.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
